--- a/15_defaults.html
+++ b/15_defaults.html
@@ -16,13 +16,13 @@
 			Ext.Loader.setConfig({ enabled: true });
 			Ext.application({
 				name: "MyApp",
+				requires: ['Ext.MessageBox'],
 				launch: function() {
 					var btn1 = Ext.create("Ext.Button", { text: "버튼1" });
 					var btn2 = new Ext.Button({ text: "버튼2" });
 					var btn3 = { xtype:"button", text: "버튼3" };
 
 					var rootPanel = Ext.create("Ext.Panel", {
-						/* requires: ['Ext.MessageBox'], */
 						layout: { type:"hbox", align:"top" },
 						defaults: {
 							flex: 1,
